data/derived/comb/progs/unify/prog1494.ml.out
Characters 163-164:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a list * 'b -> 'c -> bool
       but an expression was expected of type
         'a list * 'b -> 'c -> 'a list * 'b
       Type bool is not compatible with type 'a list * 'b 
